# next-winebridge

./: Cargo.toml  README.md  build.rs
proto/: winebridge.proto
src/: lib.rs  main.rs
src/dll_overrides/: manager.rs
src/processes/: manager.rs  process.rs
src/registry/: manager.rs
src/services/: manager.rs
