[package]
name = "bottles-winebridge"
version = "0.1.0"
edition = "2021"

[dependencies]
bottles-core = { git = "https://github.com/bottlesdevs/next-core", features = [
    "winebridge",
] }
tonic = "0.12.3"
tokio = { version = "1.28.2", features = ["full"] }

# [patch."https://github.com/bottlesdevs/next-core"]
# bottles-core = { path = "../next-core" }
