[package]
name = "bottles-winebridge"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
keywords.workspace = true
exclude.workspace = true
readme.workspace = true

[dependencies]
bottles-core = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
]
